--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/vue3": "^2.0.17",
+    "@tailwindcss/vite": "^4.1.11",
     "@vinejs/vine": "^3.0.1",
+    "@vueuse/core": "^13.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "edge.js": "^6.2.1",
@@ -83,7 +85,8 @@
     "reka-ui": "^2.4.1",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-sonner": "^2.0.2"
   },
   "hotHook": {
     "boundaries": [
